# spatia

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  architecture.md  market-fit-analysis.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  summary.md  vite.config.ts  widget-focus-system.md
.claude/: agent-testing-guide.md
.claude/agent-memory/: MEMORY.md
.claude/agent-memory/gis-domain-expert/: MEMORY.md  feedback_patterns.md  project_spatia.md  user_profile.md
.claude/agent-memory/gis-tech-lead/: MEMORY.md  codebase-patterns.md
.claude/agent-memory/product-manager/: MEMORY.md
.claude/agent-memory/senior-engineer/: MEMORY.md
.claude/agent-memory/test-engineer/: MEMORY.md
.claude/agent-memory/underwriter-expert/: MEMORY.md  test-dataset-notes.md
.claude/agents/: gis-domain-expert.md  gis-tech-lead.md  product-manager.md  senior-engineer.md  test-engineer.md  ui-design-architect.md  underwriter-expert.md
.claude/commands/: commit.md  explore-crate.md  quality-gate.md  review-changes.md  test-module.md  verify-app.md
data/: commercial_property_portfolio.csv  dirty_businesses.csv  fuzzy_bench_addresses.csv  fuzzy_bench_variations.csv  geocode_benchmark_addresses.csv  king_county_home_sales.csv  seattle_coffee_shops.csv  seattle_parks_spatial.csv  synthetic_businesses_1k.csv  test_geocode_addresses.csv  wa_ev_registrations.csv
docs/: architecture-analysis-desktop-vs-cloud.md
scripts/: capture-app.sh  dump-ui-state.sh  ensure-app-running.sh  gen_synthetic_businesses.py
src/: App.css  App.tsx  main.tsx
src-python/spatia-geocoder/: main.py  pyproject.toml
src-python/spatia-geocoder/scripts/: package_sidecar.sh
src-tauri/: Cargo.toml  fuzzy_bench_report.json  spatia.duckdb  spatia_fuzzy_bench_report_20260314_044426.json  spatia_geocode_bench_report_20260313_063931.json  spatia_geocode_bench_report_20260313_063959.json  spatia_geocode_bench_report_20260313_064030.json  spatia_geocode_bench_report_20260313_064056.json  spatia_geocode_bench_report_20260314_044258.json  spatia_geocode_bench_report_20260314_205521.json  tauri.conf.json
src-tauri/.claude/agent-memory/senior-engineer/: MEMORY.md
src-tauri/.claude/agent-memory/test-engineer/: MEMORY.md
src-tauri/capabilities/: default.json
src-tauri/crates/ai/: Cargo.toml
src-tauri/crates/ai/src/: cleaner.rs  client.rs  lib.rs  prompts.rs
src-tauri/crates/bench/: Cargo.toml
src-tauri/crates/bench/src/: corpus.rs  lib.rs  main.rs  report.rs  runner.rs
src-tauri/crates/bench/src/geocode_bench/: mod.rs  report.rs  runner.rs
src-tauri/crates/cli/: Cargo.toml
src-tauri/crates/cli/src/: main.rs
src-tauri/crates/cli/src/commands/: help.rs  ingest.rs  mod.rs
src-tauri/crates/engine/: Cargo.toml
src-tauri/crates/engine/src/: analysis.rs  db_manager.rs  domain_pack.rs  executor.rs  export.rs  geocode.rs  geocode_cache.rs  geocode_integration_tests.rs  geocodio.rs  identifiers.rs  ingest.rs  lib.rs  overture.rs  report.rs  risk_layers.rs  schema.rs  search_index.rs  types.rs
src-tauri/crates/geocode/: Cargo.toml
src-tauri/crates/geocode/src/: cache.rs  geocode.rs  geocodio.rs  identifiers.rs  lib.rs  nominatim.rs  overture_cache.rs  scoring.rs  search_index.rs  text.rs  types.rs
src-tauri/crates/geocode/tests/: integration.rs
src-tauri/crates/geocode_bench/: BENCHMARK_FINDINGS.md  Cargo.toml
src-tauri/crates/geocode_bench/src/: corpus.rs  fuzzy_bench.rs  main.rs  report.rs  runner.rs
src-tauri/crates/ingest/: Cargo.toml
src-tauri/crates/ingest/src/: identifiers.rs  ingest.rs  lib.rs  types.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: main.rs
src-tauri/crates/overture/: Cargo.toml
src-tauri/crates/overture/src/: identifiers.rs  lib.rs  overture.rs  types.rs
src-tauri/data/: sample.csv
src-tauri/scripts/: build_overture_pmtiles.sh  download_duckdb_extensions.sh
src-tauri/src/: db_health.rs  lib.rs  main.rs
src-tauri/tests/corpus/: analysis_benchmark.toml  geocode_benchmark.toml
src/components/: AnalysisChat.tsx  BasemapSelector.tsx  ChartWidget.tsx  ChatCard.tsx  DbRecoveryDialog.tsx  FileList.tsx  HistogramWidget.tsx  LayerPanel.tsx  MapLegend.tsx  MapView.tsx  PieChartWidget.tsx  RiskWorkflow.tsx  SearchWidget.tsx  SettingsPanel.tsx  Sidebar.tsx  WidgetPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  spinner.tsx
src/lib/: aiContext.ts  appStore.ts  constants.ts  debug.ts  mapActions.ts  tauri.ts  useFocusGuard.ts  widgetStore.ts
src/mock/: data.ts
src/pages/: IngestPage.tsx  MapPage.tsx  SchemaPage.tsx  SearchPage.tsx
src/shims/: child_process.js
