[workspace]
members = [".", "crates/engine", "crates/cli", "crates/ai", "crates/bench"]

[package]
name = "spatia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spatia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
spatia_ai = { path = "crates/ai" }
spatia_engine = { path = "crates/engine" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", tag = "v0.4.42" }

