[package]
name = "spatia_ai"
version = "0.1.0"
edition = "2021"

[features]
default = ["gemini"]
gemini = []

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
spatia_engine = { path = "../engine" }
