[package]
name = "spatia_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spatia_bench"
path = "src/main.rs"

[dependencies]
spatia_engine = { path = "../engine" }
spatia_ai = { path = "../ai", features = ["gemini"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
