[package]
name = "spatia_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
