[package]
name = "spatia_geocode"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"] }
tantivy = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
mockito = "1"
