[package]
name = "spatia_mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) stdio server for Spatia"

[[bin]]
name = "spatia-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spatia_engine = { path = "../engine" }
